add color variables

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,14 @@
+// COLOR VARIABLES
+$color-primary-light: #EDEDED;
+$color-primary-medium: #444444;
+$color-primary-dark: #171717;
+
+$color-secondary: #DA0037;
+$color-secondary-light: #F05454;
+
+$color-tertiary: #30475E;
+
+
 // FONT VARIABLES
 $stylistic-font: 'Pangolin', 'Courier New', monospace;
 $primary-font: 'Poppins', sans-serif;
