--- a/css/style.css
+++ b/css/style.css
@@ -10,4 +10,6 @@ html {
   font-size: 62.5%; }
 
 body {
-  font-family: "Poppins", sans-serif; }
+  font-family: "Poppins", sans-serif;
+  background-color: black;
+  color: #EDEDED; }
