--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,9 @@
 @import "base";
+@import "typography";
+
+@import "about";
+@import "footer";
+@import "header";
+@import "home";
+@import "projects";
+@import "skills";
