--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,3 +1,9 @@
 .navbar {
     background-color: $color-primary-dark;
+
+    &__logo {
+        width: 4.5rem;
+        -webkit-filter: invert(100%);
+        filter: invert(100%);
+    }
 }
