--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -6,4 +6,21 @@
         -webkit-filter: invert(100%);
         filter: invert(100%);
     }
+
+    &__btn {
+        all: unset;
+        cursor: pointer;
+
+        transition: all .2s;
+    }
+
+    &__btn > img {
+        width: 4.5rem;
+        -webkit-filter: invert(100%);
+        filter: invert(100%);
+    }
+
+    &__btn:active {
+        transform: translateY(2px);
+    }
 }
