--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,10 +1,13 @@
 .navbar {
     background-color: $color-primary-dark;
+    padding: 1rem 1.5rem;
+
+    display: grid;
+    grid-template-columns: min-content repeat(2, minmax(min-content, 1fr));
+    grid-gap: 2rem;
 
     &__logo {
         width: 4.5rem;
-        -webkit-filter: invert(100%);
-        filter: invert(100%);
     }
 
     &__btn {
@@ -16,11 +19,26 @@
 
     &__btn > img {
         width: 4.5rem;
-        -webkit-filter: invert(100%);
-        filter: invert(100%);
     }
 
     &__btn:active {
         transform: translateY(2px);
     }
+}
+
+.navbar__menu {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    &--link {
+        color: $color-primary-light;
+        text-decoration: none;
+    }
+}
+
+.dark-mode {
+    -webkit-filter: invert(100%);
+    filter: invert(100%);
 }
