--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -40,7 +40,7 @@
 
     &-link:link,
     &-link:visited {
-        color: $color-primary-light;
+        color: inherit;
         font-size: 1.4rem;
         font-weight: 600;
         text-decoration: none;
@@ -53,7 +53,8 @@
     }
 }
 
-.dark-mode {
+.dark-mode > header > .navbar > .navbar__logo,
+.dark-mode > header > .navbar > .navbar__btn {
     -webkit-filter: invert(100%);
     filter: invert(100%);
 }
