--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html {
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr auto;
   grid-template-areas: 'header' 'main' 'footer';
-  transition: background-color .5s ease; }
+  transition: background-color .3s ease-out; }
 
 .container > header {
   grid-area: header;
