--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -40,7 +40,7 @@ html {
                          'footer';
 
     // smoother dark-mode/light-mode transition
-    transition: background-color .5s ease;
+    transition: background-color .3s ease-out;
 }
 
 .container > header {
