--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,3 +1,4 @@
 .contact {
-    background-color: $color-primary-medium;
+    background-color: $color-primary-dark;
+    color: $color-primary-light;
 }
