--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@ html {
 
 .container > main {
   grid-area: main;
-  height: 1000px; }
+  display: grid;
+  grid-template-rows: repeat(2, 100vh) repeat(2, min-content); }
 
 .container > footer {
   grid-area: footer; }
@@ -36,6 +37,7 @@ html {
   color: #EDEDED; }
 
 .about {
+  padding-top: 7rem;
   background-color: #DA0037; }
 
 .contact {
@@ -102,10 +104,13 @@ html {
   filter: invert(100%); }
 
 .home {
+  padding-top: 7rem;
   background-color: #444444; }
 
 .projects {
+  padding-top: 7rem;
   background-color: #30475E; }
 
 .skills {
+  padding-top: 7rem;
   background-color: #F05454; }
