--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -51,9 +51,9 @@ html {
 
 .container > main {
     grid-area: main;
-    
-    // for testing purposes
-    height: 1000px;
+
+    display: grid;
+    grid-template-rows: repeat(2, 100vh) repeat(2, min-content);
 }
 
 .container > footer {
