--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,4 +1,25 @@
 .home {
     padding-top: 7rem;
     background-color: $color-primary-medium;
+
+    display: grid;
+    grid-template-columns: 3rem [main-start] repeat(2, 1fr) [main-end] 3rem;
+
+    &__data {
+        // for testing purposes
+        background-color: purple;
+
+        grid-column: 2 / 3;
+
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        place-items: center;
+    }
+
+    &__img {
+        // for testing purposes
+        background-color: green;
+
+        grid-column: 3 / 4;
+    }
 }
