--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -13,6 +13,7 @@ $color-tertiary: #30475E;
 // FONT VARIABLES
 $stylistic-font: 'Pangolin', 'Courier New', monospace;
 $primary-font: 'Poppins', sans-serif;
+$code-font: Consolas, Monaco, 'Lucida Console', 'Liberation Mono', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Courier New';
 
 *,
 *::before, 
@@ -47,6 +48,7 @@ html {
     grid-area: header;
     position: sticky;
     top: 0;
+    z-index: 9;
 }
 
 .container > main {
