--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -9,11 +9,17 @@
         // for testing purposes
         background-color: purple;
 
+        font-family: $code-font;
+
         grid-column: 2 / 3;
 
         display: grid;
-        grid-template-rows: repeat(2, 1fr);
-        place-items: center;
+        grid-template-rows: 20rem 1fr;
+        grid-gap: 3rem;
+
+        justify-content: center;
+        // place-items: center;
+
     }
 
     &__img {
