--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,6 +15,8 @@ $stylistic-font: 'Pangolin', 'Courier New', monospace;
 $primary-font: 'Poppins', sans-serif;
 $code-font: Consolas, Monaco, 'Lucida Console', 'Liberation Mono', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Courier New';
 
+$home-font-size: 6rem;
+
 *,
 *::before, 
 *::after {
