--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -4,7 +4,7 @@ GLITCH TEXT
 *
 */
 .glitch {
-    font-size: 5rem;
+    font-size: $home-font-size;
     font-weight: bold;
     text-transform: uppercase;
     align-self: end;
@@ -17,6 +17,8 @@ GLITCH TEXT
         .05em 0 0 rgba(255,0,0,.75),
         -.025em -.05em 0 rgba(0,255,0,.75),
         .025em .05em 0 rgba(0,0,255,.75);
+
+    animation: glitch 1000ms infinite;
 }
 
 /* hide span behind glitch text */
@@ -27,12 +29,115 @@ GLITCH TEXT
 }
 
 .glitch span:first-child {
+    clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
+    transform: translate(-.025em, -.0125em);
+    opacity: .8;
 
+    // animated at a different speed
+    animation: glitch 800ms infinite, glitch-span-1 800ms infinite;
 }
 
 .glitch span:last-child {
+    clip-path: polygon(0 60%, 100% 60%, 100% 100%, 0 100%);
+    transform: translate(.05em, .025em);
+    opacity: .8;
 
+    animation: glitch 1200ms infinite, glitch-span-2 1000ms infinite;
 }
+
+@keyframes glitch {
+    0% {
+        text-shadow: 
+            .05em 0 0 rgba(255,0,0,.75),
+            -.05em -.025em 0 rgba(0,255,0,.75),
+            -.025em .05em 0 rgba(0,0,255,.75);
+    }
+    14% {
+        text-shadow: 
+            .05em 0 0 rgba(255,0,0,.75),
+            -.05em -.025em 0 rgba(0,255,0,.75),
+            -.025em .05em 0 rgba(0,0,255,.75);
+    }
+    15% {
+        text-shadow:
+            -.05em -.025em 0 rgba(255,0,0,.75),
+            .025em .025em 0 rgba(0,255,0,.75),
+            -.05em -.05em 0 rgba(0,0,255,.75);
+    }
+    49% {
+        text-shadow:
+            -.05em -.025em 0 rgba(255,0,0,.75),
+            .025em .025em 0 rgba(0,255,0,.75),
+            -.05em -.05em 0 rgba(0,0,255,.75);
+    }
+    50% {
+        text-shadow: 
+            .025em .05em 0 rgba(255,0,0,.75),
+            .05em 0 0 rgba(0,255,0,.75),
+            0 -.05em 0 rgba(0,0,255,.75);
+    }
+    99% {
+        text-shadow: 
+            .025em .05em 0 rgba(255,0,0,.75),
+            .05em 0 0 rgba(0,255,0,.75),
+            0 -.05em 0 rgba(0,0,255,.75);
+    }
+    100% {
+        text-shadow: 
+            -.025em 0 0 rgba(255,0,0,.75),
+            -.025em -.025em 0 rgba(0,255,0,.75),
+            -.025em -.05em 0 rgba(0,0,255,.75);
+    }
+}
+
+@keyframes glitch-span-1 {
+    0% {
+        transform: translate(-.025em, -.0125em);
+    }
+    14% {
+        transform: translate(-.025em, -.0125em);
+    }
+    15% {
+        transform: translate(0, 0);
+    }
+    49% {
+        transform: translate(0, 0);
+    }
+    50% {
+        transform: translate(.025em, .0125em);
+    }
+    99% {
+        transform: translate(.025em, .0125em);
+    }
+    100% {
+        transform: translate(0, 0);
+    }
+}
+
+@keyframes glitch-span-2 {
+    0% {
+        transform: translate(.025em, .0125em);
+    }
+    14% {
+        transform: translate(.025em, .0125em);
+    }
+    15% {
+        transform: translate(0, 0);
+    }
+    49% {
+        transform: translate(0, 0);
+    }
+    50% {
+        transform: translate(-.025em, -.0125em);
+    }
+    99% {
+        transform: translate(-.025em, -.0125em);
+    }
+    100% {
+        transform: translate(0, 0);
+    }
+}
+
 
 /*
 *
@@ -47,7 +152,7 @@ TYPEWRITER
 .text {
     display: inline-block;
     vertical-align: middle;
-    font-size: 5rem;
+    font-size: $home-font-size;
     letter-spacing: 2px;
 }
 
@@ -55,7 +160,7 @@ TYPEWRITER
     display: inline-block;
     vertical-align: middle;
     width: 3px;
-    height: 5rem;
+    height: $home-font-size;
     background-color: orangered;
 
 
