--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,14 @@ TYPEWRITER
   vertical-align: middle;
   width: 3px;
   height: 6rem;
-  background-color: orangered; }
+  background-color: orangered;
+  animation: blink .7s step-end infinite; }
+
+@keyframes blink {
+  from, to {
+    background-color: transparent; }
+  50% {
+    background-color: orangered; } }
 
 .about {
   padding-top: 7rem;
