--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -11,7 +11,7 @@
         grid-column: 2 / 3;
 
         display: grid;
-        grid-template-rows: 20rem 1fr;
+        grid-template-rows: 30rem 1fr;
         grid-gap: 3rem;
 
         justify-content: center;
@@ -22,5 +22,35 @@
     &__img {
 
         grid-column: 3 / 4;
+
+        display: grid;
+        justify-content: center;
+        align-items: center;
+
+        & > img {
+            position: relative;
+            display: block;
+            border-radius: 10%;
+            width: 55rem;
+            height: 55rem;
+            object-fit: cover;
+
+            // clip-path: polygon(0 50%, 40% 0, 100% 30%, 90% 90%, 25% 100%);
+            clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+
+            // box-shadow: 2rem 2rem 2rem rgba(0,0,0, .1);
+
+            animation: open 1s ease-out 1;
+        }
+    }
+}
+
+@keyframes open {
+    0% {
+        clip-path: polygon(50% 0, 50% 0, 50% 100%, 50% 100%);
+    }
+    100% {
+        clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+
     }
 }
