--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ TYPEWRITER
     font-family: Consolas, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New";
     grid-column: 2 / 3;
     display: grid;
-    grid-template-rows: 30rem 1fr;
+    grid-template-rows: 30rem 1fr 10rem;
     grid-gap: 3rem;
     justify-content: center; }
   .home__img {
@@ -238,12 +238,39 @@ TYPEWRITER
       object-fit: cover;
       clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
       animation: open 1s ease-out 1; }
+  .home__social {
+    display: grid;
+    grid-template-columns: 10rem repeat(3, 1fr);
+    grid-gap: 5rem; }
+    .home__social img {
+      width: 8rem;
+      height: 3.5rem;
+      opacity: .7;
+      grid-column: 2 / 3; }
+    .home__social img.linkedin-logo {
+      width: 3.5rem;
+      height: 3.5rem;
+      opacity: .7;
+      grid-column: 3 / 4;
+      -webkit-filter: invert(100%);
+      filter: invert(100%); }
+    .home__social img:hover,
+    .home__social img:active {
+      opacity: 1; }
 
 @keyframes open {
   0% {
     clip-path: polygon(50% 0, 50% 0, 50% 100%, 50% 100%); }
   100% {
     clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%); } }
+
+.dark-mode > main > .home > .home__data > .home__social > a > img {
+  -webkit-filter: invert(100%);
+  filter: invert(100%); }
+
+.dark-mode > main > .home > .home__data > .home__social > a > img.linkedin-logo {
+  -webkit-filter: invert(0%);
+  filter: invert(0%); }
 
 .projects {
   padding-top: 7rem;
