--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,4 +1,36 @@
 .about {
     padding-top: 7rem;
-    background-color: $color-secondary;
+
+    display: grid;
+    grid-template-columns: 3rem .75fr 1fr 3rem;
+    grid-template-rows: 7rem 1fr;
+    grid-gap: 3rem;
+
+    h2 {
+        grid-row: 1 / 2;
+        grid-column: 2 / span 2;
+
+        justify-self: center;
+
+        position: relative;
+    }
+
+    h2::before {
+        content: "";
+        position: absolute;
+        top: 5.5rem;
+        left: 5%;
+        width: 90%;
+        height: .5rem;
+        background: $color-primary-dark;
+        z-index: -1;
+    }
+}
+
+.dark-mode > main > .about > h2::before {
+    top: 4.25rem;
+    left: 2rem;
+    width: 100%;
+    height: 2rem;
+    background: $color-secondary;
 }
