--- a/css/style.css
+++ b/css/style.css
@@ -150,15 +150,19 @@ TYPEWRITER
   font-size: 4.5rem;
   font-weight: 700; }
 
+.body-text {
+  font-size: 2.25rem; }
+
 .about {
   padding-top: 7rem;
+  margin-bottom: 7rem;
   display: grid;
-  grid-template-columns: 3rem .75fr 1fr 3rem;
+  grid-template-columns: minmax(1rem, 10rem) 1fr minmax(1rem, 10rem);
   grid-template-rows: 7rem 1fr;
   grid-gap: 3rem; }
   .about h2 {
     grid-row: 1 / 2;
-    grid-column: 2 / span 2;
+    grid-column: 2 / 3;
     justify-self: center;
     position: relative; }
   .about h2::before {
@@ -170,6 +174,21 @@ TYPEWRITER
     height: .5rem;
     background: #202020;
     z-index: -1; }
+  .about__container {
+    grid-row: 2/ -1;
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 7rem;
+    justify-content: center;
+    align-items: center; }
+    .about__container img {
+      border-radius: 10%;
+      width: 45rem;
+      height: 55rem;
+      object-fit: cover;
+      grid-column: 1 / 2;
+      justify-self: end; }
 
 .dark-mode > main > .about > h2::before {
   top: 4.25rem;
