--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,14 +1,15 @@
 .about {
     padding-top: 7rem;
+    margin-bottom: 7rem;
 
     display: grid;
-    grid-template-columns: 3rem .75fr 1fr 3rem;
+    grid-template-columns: minmax(1rem, 10rem) 1fr minmax(1rem, 10rem);
     grid-template-rows: 7rem 1fr;
     grid-gap: 3rem;
 
     h2 {
         grid-row: 1 / 2;
-        grid-column: 2 / span 2;
+        grid-column: 2 / 3;
 
         justify-self: center;
 
@@ -24,6 +25,27 @@
         height: .5rem;
         background: $color-primary-dark;
         z-index: -1;
+    }
+
+    &__container {
+        grid-row: 2/ -1;
+        grid-column: 2 / 3;
+
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 7rem;
+        justify-content: center;
+        align-items: center;
+        
+        img {
+            border-radius: 10%;
+            width: 45rem;
+            height: 55rem;
+            object-fit: cover;
+            grid-column: 1 / 2;
+
+            justify-self: end;
+        }
     }
 }
 
