--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -14,10 +14,10 @@ $color-tertiary: #30475E;
 $stylistic-font: 'Pangolin', 'Courier New', monospace;
 $primary-font: 'Poppins', sans-serif;
 $code-font: monospace;
-//$code-font: Consolas, Monaco, 'Lucida Console', 'Liberation Mono', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Courier New';
 
 $home-font-size: 6rem;
 $title-font-size: 4.5rem;
+$paragraph-font-size: 2.25rem;
 
 *,
 *::before, 
