--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,6 @@ TYPEWRITER
     background: #202020;
     z-index: -1; }
   .about__container {
-    grid-row: 2/ -1;
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -325,4 +324,73 @@ TYPEWRITER
 
 .skills {
   padding-top: 7rem;
-  background-color: #F05454; }
+  margin-bottom: 7rem;
+  display: grid;
+  grid-template-columns: minmax(1rem, 10rem) 1fr minmax(1rem, 10rem);
+  grid-template-rows: 7rem 1fr;
+  grid-gap: 3rem; }
+  .skills h2 {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    justify-self: center;
+    position: relative; }
+  .skills h2::before {
+    content: "";
+    position: absolute;
+    top: 5.5rem;
+    left: 5%;
+    width: 90%;
+    height: .5rem;
+    background: #202020;
+    z-index: -1; }
+  .skills__container {
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 25% repeat(3, 1fr) 25%;
+    grid-template-rows: .15fr 1fr .15fr; }
+  .skills__row-1 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    padding: 1rem;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 1rem;
+    place-items: center; }
+  .skills__row-2 {
+    grid-column: 3 / 4;
+    grid-row: 1 / -1;
+    padding: 1rem;
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    grid-gap: 1rem;
+    place-items: center; }
+  .skills__row-3 {
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
+    padding: 1rem;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 1rem;
+    place-items: center; }
+  .skills__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100px;
+    width: 160px;
+    background: linear-gradient(#EDEDED, #EDEDED) padding-box, linear-gradient(to bottom right, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; }
+
+.dark-mode > main > .skills > h2::before {
+  top: 4.25rem;
+  left: 2rem;
+  width: 100%;
+  height: 2rem;
+  background: #DA0037; }
+
+.dark-mode > main > .skills > .skills__container > .skills__row-1 > .skills__item,
+.dark-mode > main > .skills > .skills__container > .skills__row-2 > .skills__item,
+.dark-mode > main > .skills > .skills__container > .skills__row-3 > .skills__item {
+  background: linear-gradient(black, black) padding-box, linear-gradient(to bottom right, #30475E, #DA0037) border-box; }
