--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -1,4 +1,135 @@
 .skills {
     padding-top: 7rem;
-    background-color: $color-secondary-light;
+    margin-bottom: 7rem;
+
+    display: grid;
+    grid-template-columns: minmax(1rem, 10rem) 1fr minmax(1rem, 10rem);
+    grid-template-rows: 7rem 1fr;
+    grid-gap: 3rem;
+
+    h2 {
+        grid-row: 1 / 2;
+        grid-column: 2 / 3;
+
+        justify-self: center;
+
+        position: relative;
+    }
+
+    h2::before {
+        content: "";
+        position: absolute;
+        top: 5.5rem;
+        left: 5%;
+        width: 90%;
+        height: .5rem;
+        background: $color-primary-dark;
+        z-index: -1;
+    }
+
+    &__container {
+        grid-column: 2 / 3;
+
+        display: grid;
+        grid-template-columns: 25% repeat(3, 1fr) 25%;
+        grid-template-rows: .15fr 1fr .15fr;
+        // grid-gap: 3.5rem;
+    }
+
+    &__row {
+
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: space-evenly;
+        // align-items: center;
+
+        &-1 {
+            grid-column: 2 / 3;
+            grid-row: 2 / 3;
+            // background-color: green;
+            padding: 1rem;
+
+            // display: flex;
+            // flex-direction: column;
+            // justify-content: center;
+            // align-items: center;
+            // justify-content: space-evenly;
+
+            display: grid;
+            grid-template-rows: repeat(3, 1fr);
+            grid-gap: 1rem;
+
+            place-items: center;
+        }
+
+        &-2 {
+            grid-column: 3 / 4;
+            grid-row: 1 / -1;
+            // background-color: crimson;
+            padding: 1rem;
+
+            // display: flex;
+            // flex-direction: column;
+            // justify-content: center;
+            // align-items: center;
+            // justify-content: space-evenly;
+
+            display: grid;
+            grid-template-rows: repeat(4, 1fr);
+            grid-gap: 1rem;
+
+            place-items: center;
+        }
+
+        &-3 {
+            grid-column: 4 / 5;
+            grid-row: 2 / 3;
+            // background-color: purple;
+            padding: 1rem;
+
+            // display: flex;
+            // flex-direction: column;
+            // justify-content: center;
+            // align-items: center;
+            // justify-content: space-evenly;
+
+            display: grid;
+            grid-template-rows: repeat(3, 1fr);
+            grid-gap: 1rem;
+
+            place-items: center;
+        }
+    }
+
+    &__item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+
+        height: 100px;
+        width: 160px;
+
+        background: 
+            linear-gradient($color-primary-light, $color-primary-light) padding-box,
+            linear-gradient(to bottom right, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+}
+
+.dark-mode > main > .skills > h2::before {
+    top: 4.25rem;
+    left: 2rem;
+    width: 100%;
+    height: 2rem;
+    background: $color-secondary;
+}
+
+.dark-mode > main > .skills > .skills__container > .skills__row-1 > .skills__item,
+.dark-mode > main > .skills > .skills__container > .skills__row-2 > .skills__item,
+.dark-mode > main > .skills > .skills__container > .skills__row-3 > .skills__item {
+    background: 
+        linear-gradient($color-primary-darkest, $color-primary-darkest) padding-box,
+        linear-gradient(to bottom right, $color-tertiary, $color-secondary) border-box;
 }
