--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -17,6 +17,7 @@ $code-font: monospace;
 
 $home-font-size: 6rem;
 $title-font-size: 4.5rem;
+$smaller-title-font-size: 1.5rem;
 $paragraph-font-size: 2.25rem;
 
 *,
@@ -66,6 +67,7 @@ html {
     grid-area: footer;
 }
 
+// toggles bg-color and text-color of entire page
 .container.dark-mode {
     background-color: $color-primary-darkest;
     color: $color-primary-light;
