--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -81,11 +81,13 @@
     }
 }
 
+// toggles color of Github logo
 .dark-mode > main > .home > .home__data > .home__social > a > img {
     -webkit-filter: invert(100%);
     filter: invert(100%);
 }
 
+// toggles color of LinkedIn logo
 .dark-mode > main > .home > .home__data > .home__social > a > img.linkedin-logo {
     -webkit-filter: invert(0%);
     filter: invert(0%);
