--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -7,6 +7,9 @@
     grid-template-rows: 7rem 1fr;
     grid-gap: 3rem;
 
+    // align-items: center;
+    // justify-content: center;
+
     h2 {
         grid-row: 1 / 2;
         grid-column: 2 / 3;
@@ -33,6 +36,8 @@
         display: grid;
         grid-template-columns: 25% repeat(3, 1fr) 25%;
         grid-template-rows: .15fr 1fr .15fr;
+        justify-content: center;
+        align-items: center;
         // grid-gap: 3.5rem;
     }
 
@@ -107,8 +112,11 @@
         align-items: center;
         justify-content: space-around;
 
-        height: 100px;
-        width: 160px;
+        // height: 100px;
+        // width: 160px;
+
+        padding: .8rem 5rem 1.2rem;
+        width: 18rem;
 
         /*
         *
@@ -130,6 +138,18 @@
         border-radius: 10%;
         border: 3.5px solid transparent;
     }
+}
+
+.skills__item > img {
+    padding-bottom: 1.5rem;
+    width: auto;
+    height: 8rem;
+    // max-width: 100%;
+    // height: 10rem;
+    // object-fit: cover;
+    // display: block;
+    // width: auto;
+    // height: auto;
 }
 
 .dark-mode > main > .skills > h2::before {
