--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,8 @@ html {
 .container > main {
   grid-area: main;
   display: grid;
-  grid-template-rows: repeat(2, 100vh) repeat(2, min-content); }
+  grid-template-rows: repeat(2, 100vh) repeat(2, min-content);
+  grid-gap: 3rem; }
 
 .container > footer {
   grid-area: footer; }
@@ -163,7 +164,6 @@ TYPEWRITER
 
 .about {
   padding-top: 7rem;
-  margin-bottom: 7rem;
   display: grid;
   grid-template-columns: minmax(1rem, 10rem) 1fr minmax(1rem, 10rem);
   grid-template-rows: 7rem 1fr;
