--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -59,7 +59,9 @@
         & > img {
             position: relative;
             display: block;
-            border-radius: 10%;
+            // border-radius: 10%;
+            border-bottom-left-radius: 50% 20%;
+            border-bottom-right-radius: 50% 20%;
             width: 55rem;
             height: 55rem;
             object-fit: cover;
